# dataset-cropper

./: .gitignore  CMakeLists.txt  arrange-set-3-20.sh  dataset-cropper.cpp  dataset-selector.cpp  main.cpp
src/: dataset-chopper.cpp  dataset-selector.cpp
